# reciper

./: README.md  pyproject.toml  ui.sh
.recipes/: hypixel-skyblock.json  satisfactory.json
reciper/: db.py  tree.py
reciper/cli/: recipe.py
reciper/recipe/: __init__.py  recipe.py  tree.py
reciper/ui/: __init__.py  __main__.py  elements.py  glue.py  pages.py  resources.py  theme.py
