[tool.poetry]
name = "reciper"
version = "0.1.0"
description = ""
authors = ["technomunk <thegriffones@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1"
nicegui = "^2.3"
pydantic = "^2.9"

[tool.poetry.group.dev.dependencies]
black = "*"
flake8 = "*"
isort = "*"
mypy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100
target_version = ["py312"]
